--- a/style.css
+++ b/style.css
@@ -1,24 +1,4 @@
-/*
-Theme Name: HUGE
-Description: Creative Coming Soon Template
-Author: SquirrelLabs
-Author URI: https://themeforest.net/user/squirrellabs/portfolio?ref=SquirrelLab
-Version: 1.0
-License: https://themeforest.net/licenses/standard
 
----
-
-/*******************************
-  Table of Contents
-
-  1.0 Content Styles
-  2.0 Content Styles
-  3.0 Countdown
-*******************************/
-
-/**********************************/
-/******* 1.0 General Styles *******/
-/**********************************/
 html{
   min-height: 100%;
   height: 100%;
@@ -31,9 +11,6 @@ body {
   font-weight: 400
 }
 
-/**********************************/
-/******* 2.0 Content Styles *******/
-/**********************************/
 .container {
   position: absolute;
   height: 100%;
@@ -110,23 +87,18 @@ svg {
   opacity: 0.8;
 }
 .content img {
-  height: 16px;
-  width: 16px;
-  padding: 12px;
-  margin-right: 10px;
-  background: rgba(255, 255, 255, .4);
+  height: 160px;
+  width: 160px;
   -webkit-border-radius: 50px;
   -moz-border-radius: 50px;
   border-radius: 50px;
-  float: left;
+  float: center;
   position: relative;
 }
 
-/**********************************/
-/*******    3.0 Countdown   *******/
-/**********************************/
 #countdown {
-    margin: 20vh auto;
+  color: #00ffd5;
+    margin: 10vh auto;
     top: 50%;
     left: 0;
     right: 0;
